syntax = "proto3";

package shared.proto.services.v1;

import "core/identity.proto";
import "core/pagination.proto";

// UserService - User profile & contact management
service UserService {
  // GetUserProfile - Fetch user profile
  rpc GetUserProfile(GetUserProfileRequest) returns (UserProfile);

  // UpdateUserProfile - Update own profile
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UserProfile);

  // SearchUsers - Search for users by username/name
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);

  // GetContacts - Get user's contact list
  rpc GetContacts(GetContactsRequest) returns (GetContactsResponse);

  // AddContact - Add user to contacts
  rpc AddContact(AddContactRequest) returns (AddContactResponse);

  // RemoveContact - Remove user from contacts
  rpc RemoveContact(RemoveContactRequest) returns (RemoveContactResponse);

  // BlockUser - Block user (prevent messages)
  rpc BlockUser(BlockUserRequest) returns (BlockUserResponse);

  // UnblockUser - Unblock user
  rpc UnblockUser(UnblockUserRequest) returns (UnblockUserResponse);

  // GetBlockedUsers - List blocked users
  rpc GetBlockedUsers(GetBlockedUsersRequest) returns (GetBlockedUsersResponse);

  // UpdateProfilePicture - Upload profile picture
  rpc UpdateProfilePicture(UpdateProfilePictureRequest) returns (UpdateProfilePictureResponse);

  // GetUserCapabilities - Get user's device capabilities
  rpc GetUserCapabilities(GetUserCapabilitiesRequest) returns (GetUserCapabilitiesResponse);
}

// UserProfile - User profile information
message UserProfile {
  // User ID
  string user_id = 1;

  // Username (optional unique handle; null = private/no username)
  optional string username = 2;

  // Display name (not unique)
  optional string display_name = 3;

  // Bio/status
  optional string bio = 4;

  // Profile picture URL
  optional string profile_picture_url = 5;

  // Email (private, only visible to self)
  optional string email = 6;

  // Phone (private, only visible to self)
  optional string phone = 7;

  // Created timestamp
  int64 created_at = 8;

  // Last seen timestamp (privacy-controlled)
  optional int64 last_seen = 9;

  // Public key fingerprint (for verification)
  optional string public_key_fingerprint = 10;

  // Privacy settings
  optional PrivacySettings privacy = 11;

  // Verified badge (official accounts)
  bool verified = 12;

  // Reserved for future features
  reserved 13 to 50;
}

// PrivacySettings - User privacy preferences
message PrivacySettings {
  // Who can see last seen?
  PrivacyLevel last_seen_visibility = 1;

  // Who can see profile picture?
  PrivacyLevel profile_picture_visibility = 2;

  // Who can see bio?
  PrivacyLevel bio_visibility = 3;

  // Who can message me?
  PrivacyLevel message_visibility = 4;

  // Who can call me?
  PrivacyLevel call_visibility = 5;

  // Read receipts enabled?
  bool read_receipts_enabled = 6;

  // Typing indicators enabled?
  bool typing_indicators_enabled = 7;

  // Reserved for future settings
  reserved 8 to 15;
}

// PrivacyLevel - Privacy visibility level
enum PrivacyLevel {
  // Unknown level (must be 0)
  PRIVACY_LEVEL_UNSPECFIED = 0;

  // Everyone can see
  PRIVACY_LEVEL_EVERYONE = 1;

  // Only contacts can see
  PRIVACY_LEVEL_CONTACTS = 2;

  // Nobody can see (private)
  PRIVACY_LEVEL_NOBODY = 3;

  // Reserved for future levels
  reserved 4 to 15;
}

// GetUserProfileRequest - Fetch user profile
message GetUserProfileRequest {
  // User ID to fetch
  string user_id = 1;
}

// UpdateUserProfileRequest - Update profile
message UpdateUserProfileRequest {
  // User ID to update (current authenticated user)
  string user_id = 1;

  // Username update: Some("name") = set, Some("")/None handling by server
  optional string username = 2;

  // Reserved for future profile fields
  reserved 3 to 10;
}

// SearchUsersRequest - Search users
message SearchUsersRequest {
  // Search query (username, display name)
  string query = 1;

  // Pagination
  shared.proto.core.v1.PageRequest page = 2;

  // Exact match only?
  bool exact_match = 3;

  // Reserved for future filters
  reserved 4 to 10;
}

// SearchUsersResponse - Search results
message SearchUsersResponse {
  // Matching users
  repeated UserProfile users = 1;

  // Total matches
  uint32 total_count = 2;

  // Next cursor
  optional shared.proto.core.v1.Cursor next_cursor = 3;

  // Has more results?
  bool has_more = 4;
}

// GetContactsRequest - Get contacts
message GetContactsRequest {
  // Pagination
  shared.proto.core.v1.PageRequest page = 1;

  // Filter by online status (optional)
  optional bool online_only = 2;
}

// GetContactsResponse - Contacts list
message GetContactsResponse {
  // Contacts
  repeated Contact contacts = 1;

  // Total contacts
  uint32 total_count = 2;

  // Next cursor
  optional shared.proto.core.v1.Cursor next_cursor = 3;

  // Has more results?
  bool has_more = 4;
}

// Contact - Contact entry
message Contact {
  // User profile
  UserProfile profile = 1;

  // Added timestamp
  int64 added_at = 2;

  // Custom nickname (optional)
  optional string nickname = 3;

  // Is online?
  bool online = 4;

  // Last seen (if privacy allows)
  optional int64 last_seen = 5;
}

// AddContactRequest - Add contact
message AddContactRequest {
  // User ID to add
  string user_id = 1;

  // Optional nickname
  optional string nickname = 2;
}

// AddContactResponse - Add confirmation
message AddContactResponse {
  // Success
  bool success = 1;

  // Contact info
  Contact contact = 2;
}

// RemoveContactRequest - Remove contact
message RemoveContactRequest {
  // User ID to remove
  string user_id = 1;
}

// RemoveContactResponse - Remove confirmation
message RemoveContactResponse {
  // Success
  bool success = 1;
}

// BlockUserRequest - Block user
message BlockUserRequest {
  // User ID to block
  string user_id = 1;

  // Reason (optional)
  optional string reason = 2;
}

// BlockUserResponse - Block confirmation
message BlockUserResponse {
  // Success
  bool success = 1;

  // Blocked timestamp
  int64 blocked_at = 2;
}

// UnblockUserRequest - Unblock user
message UnblockUserRequest {
  // User ID to unblock
  string user_id = 1;
}

// UnblockUserResponse - Unblock confirmation
message UnblockUserResponse {
  // Success
  bool success = 1;
}

// GetBlockedUsersRequest - List blocked users
message GetBlockedUsersRequest {
  // Pagination
  shared.proto.core.v1.PageRequest page = 1;
}

// GetBlockedUsersResponse - Blocked users list
message GetBlockedUsersResponse {
  // Blocked users
  repeated BlockedUser blocked_users = 1;

  // Total blocked
  uint32 total_count = 2;

  // Next cursor
  optional shared.proto.core.v1.Cursor next_cursor = 3;

  // Has more results?
  bool has_more = 4;
}

// BlockedUser - Blocked user entry
message BlockedUser {
  // User ID
  string user_id = 1;

  // Username
  string username = 2;

  // Blocked timestamp
  int64 blocked_at = 3;

  // Reason (if provided)
  optional string reason = 4;
}

// UpdateProfilePictureRequest - Upload profile picture
message UpdateProfilePictureRequest {
  // Image data (JPEG/PNG, max 5MB)
  bytes image_data = 1;

  // MIME type
  string mime_type = 2;
}

// UpdateProfilePictureResponse - Upload confirmation
message UpdateProfilePictureResponse {
  // Success
  bool success = 1;

  // New profile picture URL
  string profile_picture_url = 2;
}

// GetUserCapabilitiesRequest - Get user capabilities
message GetUserCapabilitiesRequest {
  // User ID
  string user_id = 1;
}

// GetUserCapabilitiesResponse - User capabilities
message GetUserCapabilitiesResponse {
  // User ID
  string user_id = 1;

  // Supported crypto suites (ordered by preference)
  repeated string crypto_suites = 2;

  // Supports WebRTC?
  bool supports_webrtc = 3;

  // Supports MLS?
  bool supports_mls = 4;

  // Supports Post-Quantum crypto?
  bool supports_pq = 5;

  // Device capabilities (bitmask per device)
  repeated DeviceCapability device_capabilities = 6;

  // Reserved for future capabilities
  reserved 7 to 15;
}

// DeviceCapability - Capability per device
message DeviceCapability {
  // Device ID
  string device_id = 1;

  // Platform
  shared.proto.core.v1.DevicePlatform platform = 2;

  // Capabilities (bitmask)
  uint32 capabilities = 3;
}
